--- a/index.html
+++ b/index.html
@@ -1180,7 +1180,7 @@
             </div>
             
             <div class="events-grid" id="favoritesGrid">
-
+                <div class="no-favorites">
                     <i class="far fa-bookmark"></i>                
                     <h3>Belum ada event favorit</h3>
                     <p>Simpan event dengan menekan tombol <strong>Simpan Acara</strong> di halaman detail event</p>
@@ -1216,7 +1216,17 @@
                     </div>
                 </div>
                 
-<div>    </div>
+                <div class="footer-column">
+                    <h3 class="footer-title">Kontak Kami</h3>
+                    <div class="footer-contact">
+                        <div class="contact-item">
+                            <i class="fas fa-envelope"></i>
+                            <div class="contact-info">lampungagenda@gmail.com</div>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div class="contact-info">Bandar Lampung, Lampung</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -1402,7 +1412,7 @@
                     const key = localStorage.key(i);
                     if (key.startsWith('savedEvent_')) {
                         const eventId = key.replace('savedEvent_', '');
-                        const event = allEvents.find(e => `id=${e.id}` === eventId);
+                        const event = allEvents.find(e => e.id === eventId);
                         if (event) {
                             // Check if event is not past
                             const eventEndDate = new Date(event.endDate || event.startDate);
@@ -1802,4 +1812,4 @@
         });
     </script>
 </body>
-    </html>
+</html>
