--- a/index.html
+++ b/index.html
@@ -1215,18 +1215,7 @@
                         <a href="index.html#footer"><i class="fas fa-chevron-right"></i> Kontak</a>
                     </div>
                 </div>
-                
-                <div class="footer-column">
-                    <h3 class="footer-title">Kontak Kami</h3>
-                    <div class="footer-contact">
-                        <div class="contact-item">
-                            <i class="fas fa-envelope"></i>
-                            <div class="contact-info">lampungagenda@gmail.com</div>
-                        </div>
-                        <div class="contact-item">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <div class="contact-info">Bandar Lampung, Lampung</div>
-                        </div>
+            <div>    </div>
                     </div>
                 </div>
             </div>
