--- a/indexx.html
+++ b/indexx.html
@@ -1089,7 +1089,7 @@
                     <li><a href="index.html#events">Event</a></li>
                     <li><a href="index.html#calendar-section">Kalender</a></li>
                     <li><a href="index.html#favorites-section">Favorit</a></li>
-                    <li><a href="index.html#footer">Kontak</a></li>
+                    <li><a href="index.html#footer">Media Sosial</a></li>
                 </ul>
             </nav>
         </div>
@@ -1212,7 +1212,7 @@
                         <a href="index.html#events"><i class="fas fa-chevron-right"></i> Event</a>
                         <a href="index.html#calendar-section"><i class="fas fa-chevron-right"></i> Kalender</a>
                         <a href="index.html#favorites-section"><i class="fas fa-chevron-right"></i> Favorit</a>
-                        <a href="index.html#footer"><i class="fas fa-chevron-right"></i> Kontak</a>
+                        <a href="index.html#footer"><i class="fas fa-chevron-right"></i> Media Sosial</a>
                     </div>
                 </div>
             <div>    </div>
