--- a/404.html
+++ b/404.html
@@ -465,13 +465,14 @@
             <a href="/" class="logo">
                 <img src="https://iili.io/F6BiQWu.png" alt="Lampung Agenda Logo">
             </a>
-            <button class="mobile-menu-btn" id="mobileMenuBtn">☰</button>
+<button class="mobile-menu-btn" id="mobileMenuBtn">☰</button>
             <nav id="mainNav">
                 <ul>
-                    <li><a href="/">Beranda</a></li>
-                    <li><a href="/#events">Event</a></li>
-                    <li><a href="/#calendar-section">Kalender</a></li>
-                    <li><a href="/#footer">Kontak</a></li>
+                    <li><a href="index.html">Beranda</a></li>
+                    <li><a href="index.html#events">Event</a></li>
+                    <li><a href="index.html#calendar-section">Kalender</a></li>
+                    <li><a href="index.html#favorites-section">Favorit</a></li>
+                    <li><a href="index.html#footer">Media Sosial</a></li>
                 </ul>
             </nav>
         </div>
@@ -500,16 +501,18 @@
                         Lampung Agenda adalah platform informasi resmi yang menyajikan berbagai acara, kegiatan, dan event terbaru di seluruh Provinsi Lampung.
                     </p>
                     <div class="social-links">
-                        <a href="https://www.instagram.com/lampungagenda.id" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/lampungagenda" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 
-                <div class="footer-column">
+<div class="footer-column">
                     <h3 class="footer-title">Menu</h3>
                     <div class="footer-links">
-                        <a href="/"><i class="fas fa-chevron-right"></i> Beranda</a>
-                        <a href="/#events"><i class="fas fa-chevron-right"></i> Event</a>
-                        <a href="/#calendar-section"><i class="fas fa-chevron-right"></i> Kalender</a>
+                        <a href="index.html"><i class="fas fa-chevron-right"></i> Beranda</a>
+                        <a href="index.html#events"><i class="fas fa-chevron-right"></i> Event</a>
+                        <a href="index.html#calendar-section"><i class="fas fa-chevron-right"></i> Kalender</a>
+                        <a href="index.html#favorites-section"><i class="fas fa-chevron-right"></i> Favorit</a>
+                        <a href="index.html#footer"><i class="fas fa-chevron-right"></i> Media Sosial</a>
                     </div>
                 </div>
 <div></div>
